--- a/src/App.less
+++ b/src/App.less
@@ -8,12 +8,16 @@
 
 .site-layout-background {
   background: #fff;
-  padding: 20px 20px;
+  padding: 50px 50px;
 }
 
 @media only screen and (max-width: 600px) {
   .products-row {
     justify-content: center;
+  }
+  .site-layout-background {
+    background: #fff;
+    padding: 15px;
   }
 }
 .header {
