--- a/src/App.less
+++ b/src/App.less
@@ -19,11 +19,22 @@
     background: #fff;
     padding: 15px;
   }
+  .add-cart-btn-row {
+    justify-content: center !important;
+  }
 }
 .header {
   padding: 0 !important;
 }
 
+.add-cart-btn-row {
+  justify-content: flex-end;
+}
+
 .ant-btn {
   background-color: red;
+}
+
+h1 {
+  font-size: 32px;
 }
